--- a/plunker/index.html
+++ b/plunker/index.html
@@ -15,6 +15,8 @@
     <script type='text/javascript' src="//rawgit.com/marcj/css-element-queries/master/src/ElementQueries.js"></script>
     <script type='text/javascript' src="//rawgit.com/marcj/css-element-queries/master/src/ResizeSensor.js"></script>
 
+    <script type='text/javascript' src="jsPlumb-2.0.5.js"></script>
+
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.2/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/latest/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -41,6 +43,7 @@
         <gantt-draw-task></gantt-draw-task>
         <gantt-resize-sensor></gantt-resize-sensor>
         <gantt-overlap></gantt-overlap>
+        <gantt-dependencies></gantt-dependencies>
     </div>
 </div>
 </body>
